--- a/send_result1.html
+++ b/send_result1.html
@@ -18,15 +18,15 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        
-        <!-- Callout-->
+        <!-- 결과 받고 나서 보이는 페이지 -->
         <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mx-auto mb-5">
-                    Success to<br>
-                    <em>Send File</em>
+                    뇌파 데이터 송신에 성공했습니다.<br>
+                    <em></em>
                 </h2>
-                <a class="btn btn-primary btn-xl" href="main.html">Return to Main</a>
+                <h3 class="mb-5">뇌파데이터 판단 결과 우울증이 맞습니다.</h3>
+                <a class="btn btn-primary btn-xl" href="main.html">시작 화면으로 돌아가기</a>
             </div>
         </section>
         <!-- Footer-->
