--- a/send_file.html
+++ b/send_file.html
@@ -23,10 +23,10 @@
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="main.html">Project JaeJu</a></li>
-                <li class="sidebar-nav-item"><a href="main.html">Main</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">Send File</a></li>
-                <li class="sidebar-nav-item"><a href="map.html">Recommendation</a></li>
-                <li class="sidebar-nav-item"><a href="records.html">Records</a></li>
+                <li class="sidebar-nav-item"><a href="main.html">메인 화면</a></li>
+                <li class="sidebar-nav-item"><a href="#page-top">뇌파 전송</a></li>
+                <li class="sidebar-nav-item"><a href="map.html">병원 찾기</a></li>
+                <li class="sidebar-nav-item"><a href="records.html">기록 확인</a></li>
             </ul>
         </nav>
         <!-- Header-->
@@ -34,35 +34,48 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">Project JaeJu</h1>
                 <h3 class="mb-5"><em>뇌파측정기기와 인공지능을 통한 우울증 측정 서비스</em></h3>
+                <div align="center">
+                    <style>
+                        model-viewer {
+                          width: 800px;
+                          height: 600px;
+                        }
+                    </style>
+                    <model-viewer id="robot" loading="eager" alt="robot model"
+                    camera-controls src="assets/model/RobotExpressive.glb"
+                    animation-name="Idle" autoplay shadow-intensity="3">
+                    </model-viewer>
+                </div>
         </header>
         <!-- Call to Action-->
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">Send EEG Data and Get Your Depression Result</h2>
+                <h2 class="mb-4">우울증 판단을 위한 뇌파 데이터 전송</h2>
                 <!--<a class="btn btn-xl btn-light me-4" href="#!">Select File</a>
                 <a class="btn btn-xl btn-dark" href="send_result.html">Send File</a>-->
                 <form action = "http://localhost:5000/fileUpload" method = "POST" enctype="multipart/form-data">
-                    <input type = "file" value = "Select File" name = "file"/>
-                    <input type = "submit" value = "Send File" class="btn btn-xl btn-light me-4">
+                    <input type = "file" class="btn btn-xl btn-light me-4" value = "파일 선택" name = "file"/>
+                    <input type = "submit" class="btn btn-xl btn-dark" value = "파일 전송" class="btn btn-xl btn-light me-4">
                 </form>
-
+                <!-- send_result0.html: Not Depression -->
+                <!-- send_result1.html: Yes Depression -->
+                <!-- send_result2.html: Failed to Send -->
             </div>
         </section>
         <section class="content-section bg-light" id="about">
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Check Out Your Result!</h2>
+                        <h2>우울증 판단 통계를 확인하세요!</h2>
                         <p class="lead mb-5">
-                            You might wonder your result, here are some
-                            <a href="https://unsplash.com/">references</a>
-                            !
+                            <br>지금까지의 우울증 판단 통계를 확인하고 싶다면<br>
+                            <a href="records.html">여기</a>
+                            를 클릭해 확인해 주세요!
                         </p>
                     </div>
                 </div>
             </div>
         </section>
-
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
@@ -84,6 +97,9 @@
         <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Google model viewer-->
+        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
+        <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
