--- a/send_result2.html
+++ b/send_result2.html
@@ -16,59 +16,18 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <script>
-			!(function () {
-			let e = document.createElement("script"),
-			t = document.head || document.getElementsByTagName("head")[0];
-			(e.src = "https://cdn.jsdelivr.net/npm/rasa-webchat/lib/index.js"),
-			(e.async = !0),
-			(e.onload = () => {
-				window.WebChat.default(
-				{
-					initPayload: '/greet',
-					customData: { language: "kr" },
-					socketUrl: "http://localhost:5005",
-					title: "JaeJu Bot",
-					subtitle: "재주봇과 심리상담을 진행해 보세요."
-				},
-				null
-				);
-			}),
-			t.insertBefore(e, t.firstChild);
-		})();
-		</script>
     </head>
     <body id="page-top">
-        <!-- Navigation-->
-        <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
-        <nav id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">Project JaeJu</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">메인 화면</a></li>
-                <li class="sidebar-nav-item"><a href="send_file.html">뇌파 전송</a></li>
-                <li class="sidebar-nav-item"><a href="map.html">병원 찾기</a></li>
-                <li class="sidebar-nav-item"><a href="records.html">기록 확인</a></li>
-            </ul>
-        </nav>
-        <!-- Header-->
-        <header class="masthead d-flex align-items-center">
+        <!-- 결과 받고 나서 보이는 페이지 -->
+        <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">Project JaeJu</h1>
-                <h3 class="mb-5"><em>뇌파측정기기와 인공지능을 통한 우울증 측정 서비스</em></h3>
-                <div align="center">
-                    <style>
-                        model-viewer {
-                          width: 800px;
-                          height: 600px;
-                        }
-                    </style>
-                    <model-viewer id="robot" loading="eager" alt="robot model"
-                    camera-controls src="assets/model/RobotExpressive.glb"
-                    animation-name="Wave" autoplay shadow-intensity="3">
-                    </model-viewer>
-                </div>
+                <h2 class="mx-auto mb-5">
+                    뇌파 데이터 송신에 실패했습니다.<br>
+                    <em>Send File</em>
+                </h2>
+                <a class="btn btn-primary btn-xl" href="main.html">시작 화면으로 돌아가기</a>
             </div>
-        </header>
+        </section>
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
@@ -83,9 +42,11 @@
                         <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
-                <p class="text-muted small mb-0">Copyright &copy; Projcect JaeJu 2021</p>
+                <p class="text-muted small mb-0">Copyright &copy; Project JaeJu 2021</p>
             </div>
         </footer>
+        <!-- Scroll to Top Button-->
+        <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
