show information and marker of selected place

--- a/format.html
+++ b/format.html
@@ -200,5 +200,9 @@
         <!-- Google model viewer-->
         <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
         <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+        <!-- Google Map API-->
+        <script src="js/map.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgvWdfxKIz3jNw_ji2E2pxmU0DDfYonjA&libraries=places&v=weekly&channel=2"async defer></script>
+        <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgvWdfxKIz3jNw_ji2E2pxmU0DDfYonjA&callback=initMap&libraries=places&v=weekly&channel=2"async defer></script>-->
     </body>
 </html>
