result page deleted

--- a/send_file.html
+++ b/send_file.html
@@ -57,6 +57,8 @@
                     <input type = "file" class="btn btn-xl btn-light me-4" value = "파일 선택" name = "file"/>
                     <input type = "submit" class="btn btn-xl btn-dark" value = "파일 전송" class="btn btn-xl btn-light me-4">
                 </form>
+                <!-- Received accuracy:0.8... loss:0.3... predict:0 -->
+                
                 <!-- send_result0.html: Not Depression -->
                 <!-- send_result1.html: Yes Depression -->
                 <!-- send_result2.html: Failed to Send -->
