update 'send_result.html', 'records.html'

--- a/send_result.html
+++ b/send_result.html
@@ -18,29 +18,35 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- 결과 받고 나서 보이는 페이지 -->
         <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mx-auto mb-5">
-                    뇌파 데이터 송신에 성공했습니다.<br>
-                    <em></em>
+                    당신의 우울증 판단 결과입니다.<br>
                 </h2>
-                <h3 class="mb-5">뇌파데이터 판단 결과 우울증이 아닙니다.</h3>
+                <h3 class="mb-5"><p id="ann"></p></h3>
+                <div align="center">
+                    <style>
+                        model-viewer {
+                          width: 800px;
+                          height: 600px;
+                        }
+                    </style>
+                    <model-viewer id="robot" loading="eager" alt="robot model"
+                    camera-controls src="assets/model/RobotExpressive.glb"
+                    animation-name="Jump" autoplay shadow-intensity="3">
+                    </model-viewer>
+                </div>
                 <a class="btn btn-primary btn-xl" href="main.html">시작 화면으로 돌아가기</a>
             </div>
         </section>
+        <!-- JS for show EEG result -->
+		<script src="./js/result.js"></script>
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
+                        <a class="social-link rounded-circle text-white" href="https://github.com/KimJaea/JaeJu-GetEEG" target="_blank"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Project JaeJu 2021</p>
