--- a/send_file.html
+++ b/send_file.html
@@ -57,11 +57,6 @@
                     <input type = "file" class="btn btn-xl btn-light me-4" value = "파일 선택" name = "file"/>
                     <input type = "submit" class="btn btn-xl btn-dark" value = "파일 전송" class="btn btn-xl btn-light me-4">
                 </form>
-                <!-- Received accuracy:0.8... loss:0.3... predict:0 -->
-                
-                <!-- send_result0.html: Not Depression -->
-                <!-- send_result1.html: Yes Depression -->
-                <!-- send_result2.html: Failed to Send -->
             </div>
         </section>
         <section class="content-section bg-light" id="about">
@@ -83,13 +78,7 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
+                        <a class="social-link rounded-circle text-white" href="https://github.com/KimJaea/JaeJu-GetEEG" target="_blank"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Project JaeJu 2021</p>
