--- a/send_result.html
+++ b/send_result.html
@@ -36,7 +36,7 @@
                     animation-name="Jump" autoplay shadow-intensity="3">
                     </model-viewer>
                 </div>
-                <a class="btn btn-primary btn-xl" href="main.html">시작 화면으로 돌아가기</a>
+                <a class="btn btn-primary btn-xl" href="/">시작 화면으로 돌아가기</a>
             </div>
         </section>
         <!-- JS for show EEG result -->
