--- a/records.html
+++ b/records.html
@@ -52,7 +52,7 @@
         <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0" style="font-size: 30px;">뇌파 데이터를 기반으로 한 우울증 통계</h3>
+                    <h3 class="text-secondary mb-0" style="font-size: 30px;">뇌파 데이터를 기반으로 한 정신 증상</h3>
                     <h2 class="mb-5" style="font-size: 40px;">우울증 판단 통계를 확인하세요!</h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
@@ -89,9 +89,10 @@
                             <br><a id="data5"></a>%가 불면증이 있다고 판단했습니다.</p>
                     </div>
                 </div>
-                <div>
-                    <h2><br><br><br>뇌파 분석 결과 그래프<br></h2>
-                    <canvas id="graph" style="background-color: white; padding: 10px;"></canvas>
+                <div class="content-section-heading">
+                    <h2 class="mb-5" style="font-size: 40px;"><br><br>뇌파 분석 결과 그래프</h2>
+                    <canvas id="graph1" style="background-color: white; padding: 10px;"></canvas>
+                    <br>
                     <canvas id="graph2" style="background-color: white; padding: 10px;"></canvas>
                 </div>
             </div>
