--- a/main copy.html
+++ b/main copy.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Project JaeJu</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="../static/image/x-icon" href="../static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Simple line icons-->
@@ -15,18 +15,39 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../static/css/styles.css" rel="stylesheet" />
+        <script>
+			!(function () {
+			let e = document.createElement("script"),
+			t = document.head || document.getElementsByTagName("head")[0];
+			(e.src = "https://cdn.jsdelivr.net/npm/rasa-webchat/lib/index.js"),
+			(e.async = !0),
+			(e.onload = () => {
+				window.WebChat.default(
+				{
+					initPayload: '/greet',
+					customData: { language: "kr" },
+					socketUrl: "http://localhost:5005",
+					title: "JaeJu Bot",
+					subtitle: "재주봇과 심리상담을 진행해 보세요."
+				},
+				null
+				);
+			}),
+			t.insertBefore(e, t.firstChild);
+		})();
+		</script>
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="main.html">Project JaeJu</a></li>
-                <li class="sidebar-nav-item"><a href="main.html">메인 화면</a></li>
-                <li class="sidebar-nav-item"><a href="send_file.html">뇌파 전송</a></li>
-                <li class="sidebar-nav-item"><a href="map.html">병원 찾기</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">기록 확인</a></li>
+                <li class="sidebar-brand"><a href="#page-top">Project JaeJu</a></li>
+                <li class="sidebar-nav-item"><a href="#page-top">메인 화면</a></li>
+                <li class="sidebar-nav-item"><a href="/send_file">뇌파 전송</a></li>
+                <li class="sidebar-nav-item"><a href="/map">병원 찾기</a></li>
+                <li class="sidebar-nav-item"><a href="/records">기록 확인</a></li>
             </ul>
         </nav>
         <!-- Header-->
@@ -42,29 +63,12 @@
                         }
                     </style>
                     <model-viewer id="robot" loading="eager" alt="robot model"
-                    camera-controls src="assets/model/RobotExpressive.glb"
-                    animation-name="Walking" autoplay shadow-intensity="3">
+                    camera-controls src="../static/assets/model/RobotExpressive.glb"
+                    animation-name="Wave" autoplay shadow-intensity="3">
                     </model-viewer>
                 </div>
             </div>
         </header>
-        <!-- Services-->
-        <section class="content-section bg-primary text-white text-center" id="services">
-            <div class="container px-4 px-lg-5">
-                <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0" style="font-size: 30px;">뇌파 데이터를 기반으로 한 정신 증상</h3>
-                    <h2 class="mb-5" style="font-size: 40px;">우울증 판단 통계를 확인하세요!</h2>
-                </div>
-                <div class="content-section-heading">
-                    <h2 class="mb-5" style="font-size: 40px;"><br><br>뇌파 분석 결과 그래프</h2>
-                    <canvas id="graph1" style="background-color: white; padding: 10px;"></canvas>
-                    <br>
-                    <canvas id="graph2" style="background-color: white; padding: 10px;"></canvas>
-                </div>
-            </div>
-        </section>
-        <!-- JS for show records -->
-		<script src="./js/records.js"></script>
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
@@ -73,11 +77,9 @@
                         <a class="social-link rounded-circle text-white" href="https://github.com/KimJaea/JaeJu-GetEEG" target="_blank"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
-                <p class="text-muted small mb-0">Copyright &copy; Project JaeJu 2021</p>
+                <p class="text-muted small mb-0">Copyright &copy; Projcect JaeJu 2021</p>
             </div>
         </footer>
-        <!-- Scroll to Top Button-->
-        <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
@@ -85,7 +87,5 @@
         <!-- Google model viewer-->
         <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
         <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-        <!-- Char Source -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     </body>
 </html>
