--- a/records copy.html
+++ b/records copy.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Project JaeJu</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="../static/image/x-icon" href="../static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Simple line icons-->
@@ -15,17 +15,17 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../static/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="main.html">Project JaeJu</a></li>
-                <li class="sidebar-nav-item"><a href="main.html">메인 화면</a></li>
-                <li class="sidebar-nav-item"><a href="send_file.html">뇌파 전송</a></li>
-                <li class="sidebar-nav-item"><a href="map.html">병원 찾기</a></li>
+                <li class="sidebar-brand"><a href="/main">Project JaeJu</a></li>
+                <li class="sidebar-nav-item"><a href="/main">메인 화면</a></li>
+                <li class="sidebar-nav-item"><a href="/send_file">뇌파 전송</a></li>
+                <li class="sidebar-nav-item"><a href="/map">병원 찾기</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">기록 확인</a></li>
             </ul>
         </nav>
@@ -42,7 +42,7 @@
                         }
                     </style>
                     <model-viewer id="robot" loading="eager" alt="robot model"
-                    camera-controls src="assets/model/RobotExpressive.glb"
+                    camera-controls src="../static/assets/model/RobotExpressive.glb"
                     animation-name="Walking" autoplay shadow-intensity="3">
                     </model-viewer>
                 </div>
@@ -64,7 +64,7 @@
             </div>
         </section>
         <!-- JS for show records -->
-		<script src="./js/records.js"></script>
+		<script src="../static/js/records.js"></script>
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
@@ -81,7 +81,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../static/js/scripts.js"></script>
         <!-- Google model viewer-->
         <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
         <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
