--- a/send_file copy.html
+++ b/send_file copy.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Project JaeJu</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="../static/image/x-icon" href="../static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Simple line icons-->
@@ -15,18 +15,18 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../static/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="main.html">Project JaeJu</a></li>
-                <li class="sidebar-nav-item"><a href="main.html">메인 화면</a></li>
-                <li class="sidebar-nav-item"><a href="send_file.html">뇌파 전송</a></li>
-                <li class="sidebar-nav-item"><a href="map.html">병원 찾기</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">기록 확인</a></li>
+                <li class="sidebar-brand"><a href="/main">Project JaeJu</a></li>
+                <li class="sidebar-nav-item"><a href="/main">메인 화면</a></li>
+                <li class="sidebar-nav-item"><a href="#page-top">뇌파 전송</a></li>
+                <li class="sidebar-nav-item"><a href="/map">병원 찾기</a></li>
+                <li class="sidebar-nav-item"><a href="/records">기록 확인</a></li>
             </ul>
         </nav>
         <!-- Header-->
@@ -42,29 +42,37 @@
                         }
                     </style>
                     <model-viewer id="robot" loading="eager" alt="robot model"
-                    camera-controls src="assets/model/RobotExpressive.glb"
-                    animation-name="Walking" autoplay shadow-intensity="3">
+                    camera-controls src="../static/assets/model/RobotExpressive.glb"
+                    animation-name="Idle" autoplay shadow-intensity="3">
                     </model-viewer>
                 </div>
-            </div>
         </header>
-        <!-- Services-->
-        <section class="content-section bg-primary text-white text-center" id="services">
-            <div class="container px-4 px-lg-5">
-                <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0" style="font-size: 30px;">뇌파 데이터를 기반으로 한 정신 증상</h3>
-                    <h2 class="mb-5" style="font-size: 40px;">우울증 판단 통계를 확인하세요!</h2>
-                </div>
-                <div class="content-section-heading">
-                    <h2 class="mb-5" style="font-size: 40px;"><br><br>뇌파 분석 결과 그래프</h2>
-                    <canvas id="graph1" style="background-color: white; padding: 10px;"></canvas>
-                    <br>
-                    <canvas id="graph2" style="background-color: white; padding: 10px;"></canvas>
+        <!-- Call to Action-->
+        <section class="content-section bg-primary text-white">
+            <div class="container px-4 px-lg-5 text-center">
+                <h2 class="mb-4">우울증 판단을 위한 뇌파 데이터 전송</h2>
+                <!--<a class="btn btn-xl btn-light me-4" href="#!">Select File</a>
+                <a class="btn btn-xl btn-dark" href="send_result.html">Send File</a>-->
+                <form action = "http://localhost:5000/fileUpload" method = "POST" enctype="multipart/form-data">
+                    <input type = "file" class="btn btn-xl btn-light me-4" value = "파일 선택" name = "file"/>
+                    <input type = "submit" class="btn btn-xl btn-dark" value = "파일 전송" class="btn btn-xl btn-light me-4">
+                </form>
+            </div>
+        </section>
+        <section class="content-section bg-light" id="about">
+            <div class="container px-4 px-lg-5 text-center">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-10">
+                        <h2>우울증 판단 통계를 확인하세요!</h2>
+                        <p class="lead mb-5">
+                            <br>지금까지의 우울증 판단 통계를 확인하고 싶다면<br>
+                            <a href="/records">여기</a>
+                            를 클릭해 확인해 주세요!
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
-        <!-- JS for show records -->
-		<script src="./js/records.js"></script>
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
@@ -80,12 +88,10 @@
         <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
         <!-- Google model viewer-->
         <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
         <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-        <!-- Char Source -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="../static/js/scripts.js"></script>
     </body>
 </html>
