--- a/send_result copy.html
+++ b/send_result copy.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Project JaeJu</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="../static/image/x-icon" href="../static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Simple line icons-->
@@ -15,25 +15,15 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="../static/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
-        <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
-        <nav id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="main.html">Project JaeJu</a></li>
-                <li class="sidebar-nav-item"><a href="main.html">메인 화면</a></li>
-                <li class="sidebar-nav-item"><a href="send_file.html">뇌파 전송</a></li>
-                <li class="sidebar-nav-item"><a href="map.html">병원 찾기</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">기록 확인</a></li>
-            </ul>
-        </nav>
-        <!-- Header-->
-        <header class="masthead d-flex align-items-center">
+        <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">Project JaeJu</h1>
-                <h3 class="mb-5"><em>뇌파측정기기와 인공지능을 통한 우울증 측정 서비스</em></h3>
+                <h2 class="mx-auto mb-5">
+                    당신의 우울증 판단 결과입니다.<br>
+                </h2>
+                <h3 class="mb-5"><p id="ann"></p></h3>
                 <div align="center">
                     <style>
                         model-viewer {
@@ -42,29 +32,15 @@
                         }
                     </style>
                     <model-viewer id="robot" loading="eager" alt="robot model"
-                    camera-controls src="assets/model/RobotExpressive.glb"
-                    animation-name="Walking" autoplay shadow-intensity="3">
+                    camera-controls src="../static/assets/model/RobotExpressive.glb"
+                    animation-name="Jump" autoplay shadow-intensity="3">
                     </model-viewer>
                 </div>
-            </div>
-        </header>
-        <!-- Services-->
-        <section class="content-section bg-primary text-white text-center" id="services">
-            <div class="container px-4 px-lg-5">
-                <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0" style="font-size: 30px;">뇌파 데이터를 기반으로 한 정신 증상</h3>
-                    <h2 class="mb-5" style="font-size: 40px;">우울증 판단 통계를 확인하세요!</h2>
-                </div>
-                <div class="content-section-heading">
-                    <h2 class="mb-5" style="font-size: 40px;"><br><br>뇌파 분석 결과 그래프</h2>
-                    <canvas id="graph1" style="background-color: white; padding: 10px;"></canvas>
-                    <br>
-                    <canvas id="graph2" style="background-color: white; padding: 10px;"></canvas>
-                </div>
+                <a class="btn btn-primary btn-xl" href="/">시작 화면으로 돌아가기</a>
             </div>
         </section>
-        <!-- JS for show records -->
-		<script src="./js/records.js"></script>
+        <!-- JS for show EEG result -->
+		<script src="../static/js/result.js"></script>
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
@@ -81,11 +57,9 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="../static/js/scripts.js"></script>
         <!-- Google model viewer-->
         <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
         <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
-        <!-- Char Source -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     </body>
 </html>
